Removing my executables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,6 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "thread": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
